--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- Messenger Plugin chat Code -->
-    <div id="fb-root"></div>
+    <!-- <div id="fb-root"></div> -->
 
     <!-- Your Plugin chat code -->
-    <div id="fb-customer-chat" class="fb-customerchat">
-    </div>
+    <!-- <div id="fb-customer-chat" class="fb-customerchat">
+    </div> -->
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
